Containers-P03/manifest/mongodb.yml
# MONGODB
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mongodb
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:5.0-focal
        ports:
        - containerPort: 27017
          name: mongodb-27017
        - containerPort: 27018
          name: mongodb-27018
        - containerPort: 27019
          name: mongodb-27019
        volumeMounts:
        - name: mongodb-persistent-storage
          mountPath: /data/db
      volumes:
      - name: mongodb-persistent-storage
        persistentVolumeClaim:
          claimName: mongodb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
    name: mongo-port-27017
    protocol: TCP
  - port: 27018
    targetPort: 27018
    name: mongo-port-27018
    protocol: TCP
  - port: 27019
    targetPort: 27019
    name: mongo-port-27019
    protocol: TCP
  type: ClusterIP
