Containers-P03/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eoloplanner-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: cluster-ip
  - http:
      paths:
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: server-service
            port:
              number: 8080
      - path: /toposervice/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: toposervice
            port:
              number: 8181
